# de_research

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data_processing/: Dockerfile  Makefile  README.md  download_nyc_taxi_data.py
data_processing/akv_dbt_project/: .sqlfluff  .sqlfluffignore  .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
data_processing/akv_dbt_project/macros/: stage_model_filter.sql
data_processing/akv_dbt_project/models/: source.yml  write_to_s3.sql
data_processing/dbt_duckdb_s3_project/: .gitignore  Dockerfile  Makefile  README.md  dbt_project.yml  profiles.yml  requirements-local.in
data_processing/dbt_duckdb_s3_project/macros/: stage_model_filter.sql
data_processing/dbt_duckdb_s3_project/terraform/: main.tf  provider.tf  variables.tf
data_processing/scripts/: download_nyc_taxi_data.py
data_processing/sqlmesh/: .gitignore  README.md
data_processing/sqlmesh/sqlmesh-example/: config.yaml
kubernetes/: Makefile  README.md
kubernetes/apps/: README.md
kubernetes/apps/airbyte/: deploy.yaml
kubernetes/apps/argocd/: README.md  kustomization.yaml
kubernetes/apps/awesome-api/: deploy.yaml
kubernetes/apps/opencost/: deploy.yaml
kubernetes/apps/some_app/: deploy.yaml
kubernetes/argocd/: Makefile  app-proj.yaml  argocd-app.yaml  kustomization.yaml  root-app.yaml
kubernetes/argocd/patches/: argocd-cm.yaml
kubernetes/argocd/projects/: dev.yaml
kubernetes/charts/airbyte/: Chart.yaml.local  values.yaml  values.yaml.test
programming_languages/go-tutorial/: main.go
(+47 files in other folders)
